content/cli/v11/commands/npm-adduser.mdx
---
title: npm-adduser
section: 1
description: Add a registry user account
github_repo: npm/cli
github_branch: latest
github_path: docs/lib/content/commands/npm-adduser.md
redirect_from:
  - /cli-commands/adduser
  - /cli-commands/npm-adduser
  - /cli-documentation/adduser
  - /cli-documentation/cli-commands/adduser
  - /cli-documentation/cli-commands/npm-adduser
  - /cli-documentation/commands/adduser
  - /cli-documentation/commands/npm-adduser
  - /cli-documentation/npm-adduser
  - /cli-documentation/v11/adduser
  - /cli-documentation/v11/cli-commands/adduser
  - /cli-documentation/v11/cli-commands/npm-adduser
  - /cli-documentation/v11/commands/adduser
  - /cli-documentation/v11/commands/npm-adduser
  - /cli-documentation/v11/npm-adduser
  - /cli/adduser
  - /cli/cli-commands/adduser
  - /cli/cli-commands/npm-adduser
  - /cli/commands/adduser
  - /cli/commands/npm-adduser
  - /cli/npm-adduser
  - /cli/v11/adduser
  - /cli/v11/cli-commands/adduser
  - /cli/v11/cli-commands/npm-adduser
  - /cli/v11/commands/adduser
  - /cli/v11/npm-adduser
  - /commands/adduser
  - /commands/npm-adduser
---

### Synopsis

```bash
npm adduser

alias: add-user
```

Note: This command is unaware of workspaces.

### Description

Create a new user in the specified registry, and save the credentials to the `.npmrc` file. If no registry is specified, the default registry will be used (see [`registry`](/cli/v11/using-npm/registry)).

When you run `npm adduser`, the CLI automatically generates a legacy token of `publish` type. For more information, see [About legacy tokens](/about-access-tokens#about-legacy-tokens).

When using `legacy` for your `auth-type`, the username, password, and email are read in from prompts.

### Configuration

#### `registry`

- Default: "https://registry.npmjs.org/"
- Type: URL

The base URL of the npm registry.

#### `scope`

- Default: the scope of the current project, if any, or ""
- Type: String

Associate an operation with a scope for a scoped registry.

Useful when logging in to or out of a private registry:

```
# log in, linking the scope to the custom registry
npm login --scope=@mycorp --registry=https://registry.mycorp.com

# log out, removing the link and the auth token
npm logout --scope=@mycorp
```

This will cause `@mycorp` to be mapped to the registry for future installation of packages specified according to the pattern `@mycorp/package`.

This will also cause `npm init` to create a scoped package.

```
# accept all defaults, and create a package named "@foo/whatever",
# instead of just named "whatever"
npm init --scope=@foo --yes
```

#### `auth-type`

- Default: "web"
- Type: "legacy" or "web"

What authentication strategy to use with `login`. Note that if an `otp` config is given, this value will always be set to `legacy`.

### See Also

- [npm registry](/cli/v11/using-npm/registry)
- [npm config](/cli/v11/commands/npm-config)
- [npmrc](/cli/v11/configuring-npm/npmrc)
- [npm owner](/cli/v11/commands/npm-owner)
- [npm whoami](/cli/v11/commands/npm-whoami)
- [npm token](/cli/v11/commands/npm-token)
- [npm profile](/cli/v11/commands/npm-profile)
